--- a/apple/wyy271.plist
+++ b/apple/wyy271.plist
@@ -12,6 +12,22 @@
                <key>url</key>
                <string><![CDATA[https://mcdawanjia.top/apple/cydia_1.1.36_iphoneos-arm_signed.ipa]]></string>
              </dict>
+			 <dict>
+               <key>kind</key>
+               <string>display-image</string>
+               <key>needs-shine</key>
+               <integer>0</integer>
+               <key>url</key>
+               <string><![CDATA[https://mcdawanjia.top/apple/cydia/pic.png]]></string>
+             </dict>
+             <dict>
+               <key>kind</key>
+               <string>full-size-image</string>
+               <key>needs-shine</key>
+               <true/>
+               <key>url</key>
+               <string><![CDATA[https://mcdawanjia.top/apple/cydia/pic.png]]></string>
+             </dict>
            </array>
            <key>metadata</key>
            <dict>
